finish contact section

--- a/index.html
+++ b/index.html
@@ -959,7 +959,14 @@
     </section>
     <section class="comingSoon"></section>
     <section class="movieList"></section>
-    <section class="contact"></section>
+    <section class="contact container">
+        <div class="row">
+            <div class="col-12">
+                <p>Need help? Contact our support team on</p>
+                <h2>0330 123 4567</h2>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 
     <!-- Thư viện hỗ trợ -->
