--- a/index.html
+++ b/index.html
@@ -967,7 +967,60 @@
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6>GET IN TOUCH</h6>
+                    <ul>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Give us feedback</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h6>ABOUT MOVIE STAR</h6>
+                    <ul>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Find us</a></li>
+                        <li><a href="#">Schedule</a></li>
+                        <li><a href="#">News</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h6>LEGAL STUFF</h6>
+                    <ul>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="#">Cookie policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h6>CONNECT WITH US</h6>
+                    <ul>
+                        <li><a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                            Facebook
+                        </a></li>
+                        <li><a href="#">
+                            <i class="fab fa-twitter"></i>
+                            Twitter
+                        </a></li>
+                        <li><a href="#">
+                            <i class="fab fa-google-plus-g"></i>
+                            Google +
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row copyright">
+                <p class="text-white">
+                    2017 © Movie Star / 
+                    <a href="">Web design by Klever media</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <!-- Thư viện hỗ trợ -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
