Finish movieList section

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
         </div>
     </section>
-    <section class="showTimes container py-5">
+    <section class="showTimes container">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link line " id="mon-tab" data-toggle="tab" href="#mon" role="tab" >MON</a>
@@ -969,7 +969,95 @@
             </div>
           </div>
     </section>
-    <section class="comingSoon"></section>
+    <section class="comingSoon">
+        <div class="coming__bg">
+            <div class="coming__overlay"></div>
+            <div class="container">
+                <h2 class="line">COMING SOON</h2>
+                <div class="row pb-5">
+                    <div class="col-6">
+                        <div class="coming__detail">
+                            <span>DRAMA, THRILLER</span>
+                            <h1>Deepwater Horizon</h1>
+                            <p>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <span class="coming__date">
+                                    <i class="fa fa-calendar"></i>
+                                    30 September, 2017
+                                </span>
+                            </p>
+                            <p class="text-white my-4">
+                                A dramatization of the April 2010 disaster, when the offshore drilling rig Deepwater Horizon exploded and created the worst oil spill in U.S. history.
+                            </p>
+                            <a href="#">MORE INFO <i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div href="#" class="coming__trailer">
+                            <a href="#">
+                                <img src="./img/slide-3-video.png" alt="">
+                                <i class="fa fa-play"></i>
+                            </a>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="coming__list">
+            <div class="container">
+                <div class="row">
+                    <div class="col-2 coming__item active text-white">
+                        <img class="img-fluid" src="./img/movie-9.jpg" alt="">
+                        <h5>Too fast</h5>
+                        <p>                            
+                            15 April 2017
+                        </p>
+                    </div>
+                    <div class="col-2 coming__item text-white">
+                        <img class="img-fluid" src="./img/movie-11.jpg" alt="">
+                        <h5>Too fast</h5>
+                        <p>                            
+                            15 April 2017
+                        </p>
+                    </div>
+                    <div class="col-2 coming__item text-white">
+                        <img class="img-fluid" src="./img/movie-12.jpg" alt="">
+                        <h5>Too fast</h5>
+                        <p>                            
+                            15 April 2017
+                        </p>
+                    </div>
+                    <div class="col-2 coming__item text-white">
+                        <img class="img-fluid" src="./img/movie-13.jpg" alt="">
+                        <h5>Too fast</h5>
+                        <p>                            
+                            15 April 2017
+                        </p>
+                    </div>
+                    <div class="col-2 coming__item text-white">
+                        <img class="img-fluid" src="./img/movie-14.jpg" alt="">
+                        <h5>Too fast</h5>
+                        <p>                            
+                            15 April 2017
+                        </p>
+                    </div>
+                    <div class="col-2 coming__item text-white">
+                        <img class="img-fluid" src="./img/movie-2.jpg" alt="">
+                        <h5>Too fast</h5>
+                        <p>                            
+                            15 April 2017
+                        </p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     <section class="movieList"></section>
     <section class="contact container">
         <div class="row">
