--- a/index.html
+++ b/index.html
@@ -1008,57 +1008,55 @@
                 </div>
             </div>
         </div>
-        <div class="coming__list">
-            <div class="container">
-                <div class="row">
-                    <div class="col-2 coming__item active text-white">
-                        <img class="img-fluid" src="./img/movie-9.jpg" alt="">
-                        <h5>Too fast</h5>
-                        <p>                            
-                            15 April 2017
-                        </p>
-                    </div>
-                    <div class="col-2 coming__item text-white">
-                        <img class="img-fluid" src="./img/movie-11.jpg" alt="">
-                        <h5>Too fast</h5>
-                        <p>                            
-                            15 April 2017
-                        </p>
-                    </div>
-                    <div class="col-2 coming__item text-white">
-                        <img class="img-fluid" src="./img/movie-12.jpg" alt="">
-                        <h5>Too fast</h5>
-                        <p>                            
-                            15 April 2017
-                        </p>
-                    </div>
-                    <div class="col-2 coming__item text-white">
-                        <img class="img-fluid" src="./img/movie-13.jpg" alt="">
-                        <h5>Too fast</h5>
-                        <p>                            
-                            15 April 2017
-                        </p>
-                    </div>
-                    <div class="col-2 coming__item text-white">
-                        <img class="img-fluid" src="./img/movie-14.jpg" alt="">
-                        <h5>Too fast</h5>
-                        <p>                            
-                            15 April 2017
-                        </p>
-                    </div>
-                    <div class="col-2 coming__item text-white">
-                        <img class="img-fluid" src="./img/movie-2.jpg" alt="">
-                        <h5>Too fast</h5>
-                        <p>                            
-                            15 April 2017
-                        </p>
-                    </div>
+    </section>
+    <section class="movieList">
+        <div class="container">
+            <div class="row">
+                <div class="col-2 movieList__item active text-white">
+                    <img class="img-fluid" src="./img/movie-9.jpg" alt="">
+                    <h5>Too fast</h5>
+                    <p>                            
+                        15 April 2017
+                    </p>
+                </div>
+                <div class="col-2 movieList__item text-white">
+                    <img class="img-fluid" src="./img/movie-11.jpg" alt="">
+                    <h5>Too fast</h5>
+                    <p>                            
+                        15 April 2017
+                    </p>
+                </div>
+                <div class="col-2 movieList__item text-white">
+                    <img class="img-fluid" src="./img/movie-12.jpg" alt="">
+                    <h5>Too fast</h5>
+                    <p>                            
+                        15 April 2017
+                    </p>
+                </div>
+                <div class="col-2 movieList__item text-white">
+                    <img class="img-fluid" src="./img/movie-13.jpg" alt="">
+                    <h5>Too fast</h5>
+                    <p>                            
+                        15 April 2017
+                    </p>
+                </div>
+                <div class="col-2 movieList__item text-white">
+                    <img class="img-fluid" src="./img/movie-14.jpg" alt="">
+                    <h5>Too fast</h5>
+                    <p>                            
+                        15 April 2017
+                    </p>
+                </div>
+                <div class="col-2 movieList__item text-white">
+                    <img class="img-fluid" src="./img/movie-2.jpg" alt="">
+                    <h5>Too fast</h5>
+                    <p>                            
+                        15 April 2017
+                    </p>
                 </div>
             </div>
-            
         </div>
     </section>
-    <section class="movieList"></section>
     <section class="contact container">
         <div class="row">
             <div class="col-12">
