add NEWS SINGLE button on header dropdown

--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
                     <li class="nav-item line">
                         <a class="nav-link" href="#">SHORTCODE</a>
                     </li>
-                    <li class="nav-item line">
-                        <a class="nav-link" href="#">NEWS</a>
+                    <li class="nav-item line dropdown">
+                        <a class="nav-link"  href="#">NEWS</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">NEWS SINGLE</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item line">
                         <a class="nav-link" href="#">CONTACT</a>
