add scrolldown button on carousel

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
               <span class="sr-only">Next</span>
             </a> -->
           </div>
+          <a href="#showTimes">
+            <img src="./img/scroll-arrow.svg" class="scroll" alt="">
+          </a>
+          
     </section>
     <section class="newIN container">
         <h2 class="line">NEW IN</h2>
@@ -231,7 +235,7 @@
             </div>
         </div>
     </section>
-    <section class="showTimes container">
+    <section class="showTimes container" id="showTimes">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link line " id="mon-tab" data-toggle="tab" href="#mon" role="tab" >MON</a>
@@ -1068,7 +1072,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
