--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 text-center">
+                <div class="col-6 col-md-3 pt-4 pt-md-0 text-center">
                     <div class="newIN__img text-white">
                         <img class="img-fluid" src="./img/movie-3.jpg" alt="">
                         <div class="newIN__overlay"></div>
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 text-center">
+                <div class="col-6 col-md-3 pt-4 pt-md-0 text-center">
                     <div class="newIN__img text-white">
                         <img class="img-fluid" src="./img/movie-4.jpg" alt="">
                         <div class="newIN__overlay"></div>
