add responsive footer

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </section>
     <section class="showTimes container" id="showTimes">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item" role="presentation">
+            <li class="nav-item d-block d-sm-inline-block" role="presentation">
               <a class="nav-link line " id="mon-tab" data-toggle="tab" href="#mon" role="tab" >MON</a>
             </li>
             <li class="nav-item " role="presentation">
@@ -1006,7 +1006,7 @@
                     <div class="col-6">
                         <div href="#" class="coming__trailer">
                             <a href="#">
-                                <img src="./img/slide-3-video.png" alt="">
+                                <img class="img-fluid" src="./img/slide-3-video.png" alt="">
                                 <i class="fa fa-play"></i>
                             </a>
                             
@@ -1075,7 +1075,7 @@
     <footer id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-12 col-md-3">
                     <h6>GET IN TOUCH</h6>
                     <ul>
                         <li><a href="#">FAQs</a></li>
@@ -1083,7 +1083,7 @@
                         <li><a href="#">Contact us</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-12 col-md-3">
                     <h6>ABOUT MOVIE STAR</h6>
                     <ul>
                         <li><a href="#">About us</a></li>
@@ -1092,7 +1092,7 @@
                         <li><a href="#">News</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-12 col-md-3">
                     <h6>LEGAL STUFF</h6>
                     <ul>
                         <li><a href="#">Terms & Conditions</a></li>
@@ -1100,7 +1100,7 @@
                         <li><a href="#">Cookie policy</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-12 col-md-3">
                     <h6>CONNECT WITH US</h6>
                     <ul>
                         <li><a href="#">
