--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="navbar-brand" href="#">
                 <img src="./img/logo.svg" alt="">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#movieNavbar"
+            <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#movieNavbar"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -998,7 +998,7 @@
             <div class="container">
                 <h2 class="line">COMING SOON</h2>
                 <div class="row pb-5">
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6 ">
                         <div class="coming__detail">
                             <span>DRAMA, THRILLER</span>
                             <h1>Deepwater Horizon</h1>
@@ -1018,9 +1018,9 @@
                             </p>
                             <a href="#">MORE INFO <i class="fa fa-angle-right"></i></a>
                         </div>
-                    </div>
-                    <div class="col-12 col-sm-6 mt-4 mt-sm-0">
-                        <div href="#" class="coming__trailer">
+                    </div> 
+                    <div class="col-12 col-sm-6  mt-4 mt-sm-0">
+                        <div href="#" class="coming__trailer ">
                             <a href="https://www.youtube.com/watch?v=RhFMIRuHAL4&feature=youtu.be" class="videoComingSoon">
                                 <img class="img-fluid" src="./img/slide-3-video.png" alt="">
                                 <i class="fa fa-play"></i>
