--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             </a>
             <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#movieNavbar"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <!-- <span class="navbar-toggler-icon"></span> -->
+                <span class="icon-bar top-bar"></span>
+                <span class="icon-bar middle-bar"></span>
+                <span class="icon-bar bottom-bar"></span>
             </button>
             <div class="collapse navbar-collapse" id="movieNavbar">
                 <ul class="navbar-nav ml-auto">
@@ -64,7 +67,7 @@
                             <li><a href="#">NEWS SINGLE</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item line">
+                    <li class="nav-item line pb-2">
                         <a class="nav-link" href="#">CONTACT</a>
                     </li>
                 </ul>
