--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="carousel-item active">
                 <img src="./img/hero-1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-item__overlay"></div>
-                <div class="container carousel-caption d-none d-md-block">
+                <div class="container carousel-caption d-none d-block">
                     <span class="title">ACTION, ADVENTURE, FANTASY</span>
                     <h2>End of the World: Part II</h2>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamu.</p>
@@ -96,7 +96,8 @@
                         <span class="text-white d-inline-block rounded-circle text-center">PG</span>
                         <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="videoCarousel">
                             <button class="btn-orange border-0 text-white">
-                                <i class="fa fa-play"></i> PLAY TRAILER
+                                <i class="fa fa-play"></i> 
+                                <span>PLAY TRAILER</span>
                             </button>
                         </a>
                     </div>
@@ -105,7 +106,7 @@
               <div class="carousel-item">
                 <img src="./img/hero-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-item__overlay"></div>
-                <div class="container carousel-caption d-none d-md-block">
+                <div class="container carousel-caption d-none d-block">
                     <span class="title">ACTION, ADVENTURE, FANTASY</span>
                     <h2>End of the World: Part II</h2>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamu.</p>
@@ -113,7 +114,8 @@
                         <span class="text-white d-inline-block rounded-circle text-center">PG</span>
                         <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="videoCarousel">
                             <button class="btn-orange border-0 text-white">
-                                <i class="fa fa-play"></i> PLAY TRAILER
+                                <i class="fa fa-play"></i> 
+                                <span>PLAY TRAILER</span>
                             </button>
                         </a>
                     </div>
@@ -122,7 +124,7 @@
               <div class="carousel-item">
                 <img src="./img/hero-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-item__overlay"></div>
-                <div class="container carousel-caption d-none d-md-block">
+                <div class="container carousel-caption d-none d-block">
                     <span class="title">ACTION, ADVENTURE, FANTASY</span>
                     <h2>End of the World: Part II</h2>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamu.</p>
@@ -130,7 +132,8 @@
                         <span class="text-white d-inline-block rounded-circle text-center">PG</span>
                         <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="videoCarousel">
                             <button class="btn-orange border-0 text-white">
-                                <i class="fa fa-play"></i> PLAY TRAILER
+                                <i class="fa fa-play"></i> 
+                                <span>PLAY TRAILER</span> 
                             </button>
                         </a>
                     </div>
